--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                         <p>Я стараюсь следовать лучшим практикам в области фронтенд-разработки, всегда стремясь к оптимальному пользовательскому опыту и чистому коду.</p>
                         <p>Кроме того, я увлечен обучением новым технологиям и постоянно совершенствую свои навыки, чтобы быть в курсе последних тенденций в веб-разработке. В свободное время я люблю экспериментировать с новыми идеями и делиться своим опытом в сообществе разработчиков.</p>
                         <p>Если вам нужен профессионал, который превратит вашу идею в реальность с помощью React и Node.js, не стесняйтесь связаться со мной. Давайте сделаем веб-мир лучше вместе!</p>
+                        <div class="buttonContainer">
+                            <a href="https://t.me/VitalyStab" class="buttonLink">связаться</a>
+                        </div>
                     </div>
                 </div>
             </section>
