--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Ваше имя - Фронтенд разработчик</title>
+        <title>Виталий - Фронтенд разработчик</title>
         <link rel="stylesheet" href="./style/styles.css">
     </head>
     <body>
