--- a/index.html
+++ b/index.html
@@ -30,6 +30,18 @@
                     </div>
                 </div>
             </header>
+            <div class="fixed-header hidden">
+                <div class="container">
+                    <div class="buttons">
+                        <a href="https://t.me/VitalyStab" class="button">
+                            <img src="./img/telegram-svgrepo-com.svg" alt="Telegram">
+                        </a>
+                        <a href="https://github.com/VitaliyKova?tab=repositories" class="button">
+                            <img src="./img/github-svgrepo-com.svg" alt="GitHub">
+                        </a>
+                    </div>
+                </div>
+            </div>
             <section class="about hidden">
                 <div class="container">
                     <h2>О себе</h2>
